# pyepics

./: .gitattributes  .gitignore  .travis.yml  Changelog  INSTALL  LICENSE  MANIFEST  MANIFEST.in  PKG-INFO  README  README.md  README.rst  README.txt  TODO  advanced.html  alarm.html  arrays.html  autosave.html  azure-pipelines.yml  ca.html  devices.html  genindex.html  index.html  installation.html  license.txt  make_wininsts.bat  more.html  objects.inv  overview.html  publish.sh  publish_docs.sh  publish_tarballs.sh  pv.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  u.py  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package-conda.yml  test-python38.yml  test-with-conda.yml
SampleStage/: Icons.py  Icons24.py  SampleStage.py  StageConf.py  run_stage.py  win_setup.py
_sources/: advanced.rst.txt  advanced.txt  alarm.txt  autosave.rst.txt  autosave.txt  ca.rst.txt  devices.rst.txt  devices.txt  index.rst.txt  index.txt  installation.rst.txt  installation.txt  overview.rst.txt  pv.rst.txt  pv.txt  wx.rst.txt  wx.txt
_static/: bizstyle.js  default.css  documentation_options.js  epicsdoc.css
apps/: README.txt
apps/Instrument/: EpicsInstrument.py  InstrumentApp.py  InstrumentsGUI.py  MotorPanel.py  MyInstrument.einst  Test.ein  Test.einst  ToDo  configfile.py  creator.py  editframe.py  epics_instrument.py  epics_server.py  instrument.py  instrumentpanel.py  settingsframe.py  test.conf  test.py  utils.py  win_setup.py
apps/Instrument/doc/: .#conf.py  conf.py  implementaion.rst  index.rst  installation.rst  overview.rst  usage.rst
apps/Instrument/epics_client/: PyInstrument.adl  PyInstrument.db  epics_inst.pro  epics_instrument__define.pro
apps/SampleStage/: Icons32.py  SampleStage.html  SampleStage.py  StageConf.py  run_stage.py  test.cnf  win_setup.py  wx_utils.py
apps/XRMCollector/: EscanWriter.py  XRFWriter.py  collector.py  configFile.py  mono_control.py  sql_interface.py  util.py  xafs_scan.py
apps/XRMCollector/clientGUI/: FastmapGUI.py
apps/XRMCollector/xmap/: read_xmap_netcdf.py  xmap_mca.py
apps/XRMCollector/xps/: xps_trajectory.py
conda-recipe/: .#meta.yaml  meta.yaml
config/XPS/: XPS_C8_drivers.py  get_all  system.ini  system_multiaxis.ini  system_xygroup.ini  upload_system  xps_reboot.py
config/XPS/xps_config_oct2010/: History.tcl  StageDataBase.txt  TCL_API_drivers.out  TestVersion.tcl  XPS_C8_drivers.py  stages.ini  system.ini  system.ref
dlls/darwin64/: libCom.dylib
doc/: Makefile  advanced.rst  alarm.rst  apps.rst  arrays.rst  autosave.rst  ca.rst  conf.py  devices.rst  getting_started.rst  index.rst  installation.rst  main_index.html  more.rst  motivation.rst  overview.rst  pv.rst  threads.rst  wx.rst
doc/_templates/: indexsidebar.html  layout.html
doc/examples/: pv_access_callback.py  pv_added_callback.py  pv_connection_callback.py  pv_property_callback.py  test_threading.py
epics/: __init__.py  _version.py  alarm.py  ca.py  dbr.py  device.py  motor.py  multiproc.py  pv.py  utils.py  utils2.py  utils3.py
epics/autosave/: __init__.py  save_restore.py
epics/clibs/darwin64/: README  libComPYEPICS.dylib  (+1 more)
epics/compat/: CaChannel.py
epics/devices/: __init__.py  ad_image.py  ad_mca.py  ad_perkinelmer.py  ai.py  bi.py  bo.py  mca.py  ordereddict.py  scan.py  srs570.py  struck.py  transform.py  xspress3.py
epics/qt/: README  pvprobe_qt.py
epics/wx/: __init__.py  motordetailframe.py  motorpanel.py  ogllib.py  utils.py  wxlib.py  wxutils.py
lib/: EscanWriter.py  QuadVortex.conf  QuadVortex2.conf  XPS_C8_drivers.py  __init__.py  alarm.py  ca.py  ca1.py  ca2.py  clientGUI.py  collector.py  configFile.py  dbr.py  debugtime.py  device.py  mapper.py  mca_rois.py  mmmm  mono_control.py  motor.py  multiproc.py  pv.py  read_xmap_netcdf.py  record.py  run_xps.py  struck.py  tmono_c.py  use_escanwriter.py  util.py  utils.py  utils2.py  utils3.py  xmap_mca.py  xps_trajectory.py
lib/NewportXPS/: XPS_C8_drivers.py  rehome.py  test_xpsgather.py  xps_reboot.py
lib/autosave/: __init__.py  save_restore.py
lib/compat/: __init__.py  ca_util.py  epicsPV.py
lib/devices/: __init__.py  ad_base.py  ad_fileplugin.py  ad_image.py  ad_overlay.py  ad_perkinelmer.py  ai.py  ao.py  basic.py  bi.py  bo.py  mbbi.py  mca.py  pexrd0820.py  scaler.py  scan.py  srs570.py  struck.py  transform.py
lib/escan/: SaveEscans.py  escan2xafs.py  escan_data.py  escan_saver.py  write_escan.py
lib/gui/: __init__.py  clientGUI.py  clientGUI_v2.py  utils.py  wx_utils.py
lib/qt/: pvprobe_qt.py
lib/utils/: __init__.py
lib/wx/: MiniMotorPanel.py  MotorDetailFrame.py  MotorPanel.py  __init__.py  motordetailframe.py  motorpanel.py  ogllib.py  utils.py  wxlib.py
pyepics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: AreaDetector_Display.py  AreaDetector_Display1.py  AreaDetector_Display2.py  Motor_Display.py  README  caget.py  mpanel.py  save_restore.py  wxProbe.py  wx_motor.py  wxfloat_probe.py
t/: test1.py  test_basic_ca.py
tests/: AreaDetector_Display2.py  AutoSaveSimple.req  README  RunCoverage.sh  alarm.py  autosave_test.py  ca_connection_callback.py  ca_fastconn.py  ca_subscribe.py  ca_subscribe2.py  ca_test2.py  ca_test3.py  ca_type_conversion.py  ca_types_test.py  ca_unittest.py  ca_unittest1.py  caget_large_arrays_slow_net.py  caget_simple.py  cathread_tests.py  connect.py  connect_many.py  debugtime.py  device_ao.py  fastconn_pvdata.sav  fastconn_pvlist.txt  func_camonitor.py  memleak.py  memleak_put.py  memory_motor.py  motor_simple.py  no_monitor.py  putwait.py  pv_01.py  pv_callback.py  pv_connection_callback.py  pv_initial_callbacks.py  pv_multiple_callbacks.py  pv_putcomplete.py  pv_simpletest.py  pv_subarray_test.py  (+48 more)
tests/Setup/: pyclearcache.db  pydebug.db  simulator.py  st.cmd  start_ioc.sh
tests/UnsortedTests/: AutoSaveSimple.req  AutoSaveTest.req  autosave_test.py  ca_connection_callback.py  ca_fastconn.py  fastconn_pvlist.txt  memleak.py  memleak_put.py  memory_motor.py  motor_simple.py  pv_disconnect_with_getcb.py  test_cas.py  test_install.py  thread_put.py
(+10 files in other folders)
